# what-a-nice-collection-gui

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  ExampleBulkUpload.xlsx  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: jekyll-gh-pages.yml
docs/: application_usage.md  landing.md  local_setup.md  mongo_setup.md  python_setup.md
src/: bulk_import.md  delete_readme.md  main.py  mongo.py  security.py
