[tool.poetry]
name = "what-a-nice-collection-gui"
version = "0.1.0"
description = ""
authors = ["Eric Sutton <ericsutton6@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
precommit = "pre-commit run"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
