[tool.poetry]
name = "what-a-nice-collection-gui"
version = "0.1.0"
description = ""
authors = ["Eric Sutton <ericsutton6@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.poetry.scripts]
precommit = "pre-commit run"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
nicegui = "^1.4.29"
pydantic-settings = "^2.3.4"
pymongo = "^4.8.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
