[tool.poetry]
name = "what-a-nice-collection-gui"
version = "0.1.0"
description = ""
authors = ["Eric Sutton <ericsutton6@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
mkdocs = "^1.6.0"
nicegui = "^1.4.29"
pydantic-settings = "^2.3.4"
pymongo = "^4.8.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pyinstaller = "^6.11.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
